--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    restart: always
+    privileged: true
     volumes:
       - ./snmpd.conf:/etc/snmp/snmpd.conf
     ports:
