--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
-  snmp:
-    image: snmp
+  snmpd:
+    image: snmpd
     build:
       context: .
       dockerfile: Dockerfile
