--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   snmpd:
-    image: snmpd
+    image: popov1024/snmpd
     build:
       context: .
       dockerfile: Dockerfile
